# seahealth

./: .env.example  .gitignore  .vercelignore  LICENSE  README.md  challenge.md  databricks.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  start.sh  state.md  vercel.json
api/: index.py
app/: .env.example  README.md  globals.css  index.html  layout.tsx  package-lock.json  package.json  page.tsx
components/: command-input.tsx  contradiction-banner.tsx  evidence-card.tsx  india-map.tsx  nav-rail.tsx  stat-card.tsx
docs/: AGENT_ARCHITECTURE.md  CODEX_AUDIT_SWARM.md  DATABRICKS_AUDIT.md  DATABRICKS_PROVISIONING.md  DATA_CONTRACT.md  DECISIONS.md  LIVE_BACKEND_FRONTEND_CONNECTION_PLAN.md  PHASES.md  PRODUCT_READINESS_AUDIT_PROMPT.md  PRODUCT_READINESS_IMPLEMENTATION_AUDIT.md  PRODUCT_READINESS_REPORT.md  ROADMAP.md  UX_FLOWS.md  VISION.md  design_system.md
fixtures/: demo_query_appendectomy.json  facility_audit_demo.json  map_aggregates_demo.json  summary_demo.json
lib/: mock-data.ts  types.ts  utils.ts
scripts/: heuristic_enrich.py
tables/: facilities_index.parquet  facility_audits.parquet
tests/: README.md  _helpers.py  conftest.py  test_api.py  test_build_audits.py  test_citations_qa.py  test_data_access.py  test_databricks_resources.py  test_eval_metrics.py  test_evidence_id.py  test_extract_pipeline.py  test_extractor.py  test_facility_audit_builder.py  test_fixtures.py  test_geocode.py  test_heuristics.py  test_imports.py  test_intervals.py  test_mlflow_spans.py  test_naomi_eval.py  test_naomi_label_adapter.py  test_naomi_mapping.py  (+9 more)
(+130 files in other folders)
