[project]
name = "seahealth"
version = "0.0.1"
description = "AXON Health Intelligence — agentic healthcare verification system over Indian facility data."
requires-python = ">=3.11"
dependencies = [
    "databricks-sdk>=0.30",
    "databricks-sql-connector>=3.3",
    "python-dotenv>=1.0",
    "pydantic>=2.7",
    "mlflow>=2.16",
    "anthropic>=0.40",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pyarrow>=17",
    "pandas>=2.2",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.7",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
